footer stretch fix

--- a/Style/style.css
+++ b/Style/style.css
@@ -152,6 +152,11 @@ header {
 }
 
 footer {
+  place-self: auto stretch;
+}
+
+footer p {
   background-color: #fff;
   padding: 40px;
+  text-align: center;
 }
